--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -15,10 +15,13 @@
     {% csrf_token %}
 
     <div class="form-group row">
-    <label class="col-sm-2 col-form-label">Username:</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="text" name="username" placeholder="Username">
-        </div>
+        <label class="col-sm-2 col-form-label text-right">Username:</label>
+        <label class="col-sm-10 col-form-label">{{ user.get_username }}</label>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label text-right">Contact email:</label>
+        <label class="col-sm-10 col-form-label">{{ user.get_email }}</label>
     </div>
 
 
