--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -26,6 +26,14 @@
     </div>
 
     <div class="form-group row">
+    <label class="col-sm-2 col-form-label">Email:</label>
+        <div class="col-sm-10">
+            <input class="form-control" type="email" name="email" placeholder="Enter email">
+            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+    </div>
+
+    <div class="form-group row">
     <label class="col-sm-2 col-form-label">Password:</label>
         <div class="col-sm-10">
           <input class="form-control" type="password" name="password" placeholder="Password"/>
